# project

./: .gitignore  Dockerfile  config.py  docker-compose.yml  main.py  pyproject.toml
backend/schemas/: message_schema.py  thread_schema.py
backend/services/: llm_service.py  message_service.py  thread_service.py
backend/utils/: logger.py
db/: __init__.py
db/models/: __init__.py  message.py  thread.py
init/: init.sql
ollama/: Dockerfile  Modelfile  entrypoint.sh
ui/components/: chat_history.py  chat_input.py  new_thread_form.py  thread_sidebar.py
ui/validators/: user_validator.py
ui/views/: chat_page.py
