[tool.poetry]
name = "streamlit_app"
version = "0.1.0"
description = "Streamlit + PostgreSQL"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
