[tool.poetry]
name = "streamlit_app"
version = "0.1.0"
description = "Streamlit + PostgreSQL + LangChain + Ollama"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.33.0"
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"
langchain = "^0.3.0"
langchain-ollama = "^0.3.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
